apps/production/golinks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: golinks-http
  namespace: golinks-prod
spec:
  hostnames:
    - go.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: golinks-http-intranet
  namespace: golinks-prod
spec:
  hostnames:
    - go
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http-go
  rules:
    - backendRefs:
        - name: golinks
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: golinks-https
  namespace: golinks-prod
spec:
  hostnames:
    - go.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: golinks
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: golinks-https-intranet
  namespace: golinks-prod
spec:
  hostnames:
    - go
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https-go
  rules:
    - backendRefs:
        - name: golinks
          port: 8080
